--- a/styles.css
+++ b/styles.css
@@ -63,7 +63,7 @@ body{
     min-width: 80px;
     border-radius: 4px;
   }
-  footer a{
+  .copyright{
     text-align: center;
     display: block;
     color: #999;
